# cpp-playground

./: .gitignore  .gitmodules  README.md  setup.sh  todo  uint64t_to_doublenotfloat.cpp
base/: accumulate.cpp  arg  arg.cpp  arr_ptr.cpp  atoi_vs_stoi.cpp  const_vs_constexpr.cpp  convert_str_int_double_float.cpp  cout_vs_cerr.cpp  file_read_write.cpp  file_write.cpp  find.cpp  get_int_length.cpp  getline_vs_cin.cpp  guess_game.cpp  hello.cpp  lambda.cpp  lambda_2_generic.cpp  message.cpp  multiple_return_func.cpp  pair.cpp  pair_struct.cpp  players.txt  rm_exe.sh  set.cpp  str_append.cpp  str_append_sniplast3.cpp  str_to_uint64t.cpp  string_c_vs_cpp.cpp  tem_class.cpp  tem_class_lambda.cpp  tem_find.cpp  temp_abs.cpp  test  test.cpp  tmc.cpp  to_string.cpp  tuple_3.cpp  tuple_5.cpp  type.cpp  uint64t_str_uint64t.cpp  (+3 more)
base/cpp17/: array_struc_binding.cpp  tuple_tie_lexico.cpp
base/oop/: oop_defaultparam_privatefunc.cpp  oop_static.cpp  oop_time_lex_comp.cpp
base/stl/: accumulate.cpp  duplicate_list.cpp  equal_list.cpp  map_of_struct.cpp  map_valstruct_ofmap.cpp  remove_duplicates.cpp  remove_element_by_index.cpp  vector_emplace_front.cpp  vector_of_pair_of_string_vector.cpp  vector_variant.cpp
gitcpplibs/cpp-wj/: 0_to_5_efficent.cpp  activity_selection.cpp  amicable_numbers.cpp  area_of_polygon.cpp  atbash_cipher.cpp  babylonian_method.cpp  bloom_filter.cpp  caesar_cipher.cpp  coinchange.cpp  decimal_to_bin.cpp  decimal_to_hex.cpp  define_assign.cpp  delannoy_number.cpp  distance_bw_points.cpp  edit_distance.cpp  egg_dropping_puzzle.cpp  euler_totient.cpp  exponentiation_by_squaring.cpp  fibonacci_for_big_numbers.cpp  fibonacci_number.cpp  function_overload.cpp  infinite_loop.cpp  iterative_num.cpp  largest_sum_contiguous_subarray.cpp  log_of_factorial.cpp  lonely_integer.cpp  longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  main.cpp  math_operations.cpp  minimum_coins.cpp  modulo_exponentation_power.cpp  morse_code_generator.cpp  my_main.cpp  newman_conway_sequence.cpp  palindrome_partition.cpp  pascal_triangle.cpp  pentagonal.cpp  prime_factors.cpp  prime_numbers_of_n.cpp  (+30 more)
include/simdjson/: jsoncharutils.h  jsonioutil.h  jsonminifier.h  parsedjson.h  portability.h  simdjson.h  simdjson_version.h  stringparsing.h
libs/: README.md
libs/NumCpp/: README.md
libs/algorithms/: README.md
libs/boost/: README.md
libs/boost-py/: README.md
libs/boost-py/examples/01-HelloWorld/: CMakeLists.txt
libs/boost-py/examples/02-ExposingClasses/: CMakeLists.txt  README.md
libs/cmake/: README.md
libs/cryptography/: README.md
libs/csv/: 1_getcolnames.cpp  2_printall.cpp  README.md  README_1.md  count.cpp  define_new_col_header_row.cpp  eg1.cpp  eg2.cpp  header_row.cpp  keep_ignore_throw.cpp  null.cpp  printall.cpp  (+3 more)
libs/db_redis/: CMakeLists.txt  README.md  hmsetget.cpp  hsetget.cpp  list.cpp  msetget.cpp  quickstart.cpp  setget.cpp
src/: cabeos.cpp
(+179 files in other folders)
